Added Shader Command.

--- a/src/main/resources/assets/evolution/lang/en_us.json
+++ b/src/main/resources/assets/evolution/lang/en_us.json
@@ -58,6 +58,12 @@
   "command.evolution.pause.resume.fail": "The game is already resumed",
   "command.evolution.pause.resume.info": "The game has been resumed globally",
   "command.evolution.pause.resume.success": "The game has been resumed for everyone",
+  "command.evolution.shader.fail": "Could not find a shader with id %1$s",
+  "command.evolution.shader.query": "The id of the current shader is %1$s",
+  "command.evolution.shader.reset": "The current shader has been reset",
+  "command.evolution.shader.success": "The current shader has been set to %1$s",
+  "command.evolution.shader.toggleOff": "Shaders have been turned off",
+  "command.evolution.shader.toggleOn": "Shaders have been turned on",
   "command.evolution.tickrate.change": "The game tickrate was changed to %1$s TPS",
   "command.evolution.tickrate.current": "The current game tickrate is %1$s TPS",
   "COMMENT_KEYS": "_____________________________________________________________________________________________________________________KEYS",
