--- a/src/main/resources/assets/evolution/lang/pt_br.json
+++ b/src/main/resources/assets/evolution/lang/pt_br.json
@@ -58,6 +58,12 @@
   "command.evolution.pause.resume.fail": "O jogo já está retomado",
   "command.evolution.pause.resume.info": "O jogo foi retomado globalmente",
   "command.evolution.pause.resume.success": "O jogo foi retomado para todos",
+  "command.evolution.shader.fail": "Não foi possível encontrar um shader com id %1$s",
+  "command.evolution.shader.query": "O id do shader atual é %1$s",
+  "command.evolution.shader.reset": "O shader atual foi redefinido",
+  "command.evolution.shader.success": "O shader atual foi definido para %1$s",
+  "command.evolution.shader.toggleOff": "Os shaders foram desativados",
+  "command.evolution.shader.toggleOn": "Os shaders foram ativados",
   "command.evolution.tickrate.change": "A tickrate do jogo foi mudada para %1$s TPS",
   "command.evolution.tickrate.current": "A tickrate atual do jogo é %1$s TPS",
   "COMMENT_KEYS": "_____________________________________________________________________________________________________________________KEYS",
