Added options to debug the sky.

--- a/src/main/resources/assets/evolution/lang/en_us.json
+++ b/src/main/resources/assets/evolution/lang/en_us.json
@@ -11,17 +11,27 @@
   "itemGroup.evolution.trees_and_wood": "Trees and Wood",
   "COMMENT_CONFIG": "________________________________________________________________________________________________________________CONFIGS",
   "evolution.config.allowedValues": "Allowed Values: %1$s",
+  "evolution.config.celestialEquator": "Show Celestial Equator",
+  "evolution.config.celestialEquator.comment": "Shows a red line in the skies representing the Celestial Equator.",
+  "evolution.config.celestialForceAll": "Force Show All Celestial Debug",
+  "evolution.config.celestialForceAll.comment": "Shows all the debug options on this list, regardless of the individual config of each option.",
+  "evolution.config.celestialPoles": "Show Celestial Poles",
+  "evolution.config.celestialPoles.comment": "Shows two dots in the skies, the red one represents the Celestial North Pole, while the blue one represents the Celestial South Pole.",
   "evolution.config.clientConfig": "Client Configurations",
   "evolution.config.commonConfig": "Common Configurations",
   "evolution.config.crazyMode": "Crazy Mode",
   "evolution.config.crazyMode.comment": "I wouldn't use this if I were you... Might have some strange effects.",
   "evolution.config.default": "Default: %1$s",
+  "evolution.config.ecliptic": "Show Ecliptic",
+  "evolution.config.ecliptic.comment": "Shows a green line in the skies representing the Ecliptic (the plane of the orbit of the Earth around the Sun).",
   "evolution.config.firstPersonRenderer": "First Person Renderer",
   "evolution.config.firstPersonRenderer.comment": "Renders your body in first person as you would see it from your own eyes. Recommended!",
   "evolution.config.hitmarkers": "Hitmarkers",
   "evolution.config.hitmarkers.comment": "Shows hitmarkers when you damage or kill enemies.",
   "evolution.config.label.client": "Client",
   "evolution.config.label.common": "Common",
+  "evolution.config.label.debug": "Debug",
+  "evolution.config.label.sky": "Sky",
   "evolution.config.limitTimeUnitsToHour": "Limit Time Units to Hour",
   "evolution.config.limitTimeUnitsToHour.comment": "Limits the time units in the statistics screen to hours, instead of days and years.",
   "evolution.config.range": "Range: %1$s",
