--- a/src/main/resources/assets/evolution/lang/pt_br.json
+++ b/src/main/resources/assets/evolution/lang/pt_br.json
@@ -11,17 +11,27 @@
   "itemGroup.evolution.trees_and_wood": "Árvores e Madeira",
   "COMMENT_CONFIG": "________________________________________________________________________________________________________________CONFIGS",
   "evolution.config.allowedValues": "Valores Permitidos: %1$s",
+  "evolution.config.celestialEquator": "Mostra Equador Celestial",
+  "evolution.config.celestialEquator.comment": "Mostra uma linha vermelha nos céus representando o Equador Celestial.",
+  "evolution.config.celestialForceAll": "Forçar a Exibição dos Depuradores Celestiais",
+  "evolution.config.celestialForceAll.comment": "Mostra todas as opções de depuração desta lista, independentemente da configuração individual de cada opção.",
+  "evolution.config.celestialPoles": "Mostrar Polos Celestiais",
+  "evolution.config.celestialPoles.comment": "Mostra dois pontos nos céus, o vermelho representa o Polo Norte Celestial, enquanto que o azul representa o Polo Sul Celestial.",
   "evolution.config.clientConfig": "Configurações do Client",
   "evolution.config.commonConfig": "Configurações Gerais",
   "evolution.config.crazyMode": "Modo Doido",
   "evolution.config.crazyMode.comment": "Eu não usaria isso se fosse você... Pode ter alguns efeitos estranhos.",
   "evolution.config.default": "Padrão: %1$s",
+  "evolution.config.ecliptic": "Mostrar Eclíptica",
+  "evolution.config.ecliptic.comment": "Mostra uma linha verde nos céus representando a Eclíptica (o plano de órbita da Terra em torno do Sol).",
   "evolution.config.firstPersonRenderer": "Renderizador de Primeira Pessoa",
   "evolution.config.firstPersonRenderer.comment": "Renderiza o seu corpo em primeira pessoa como você o veria pelos seus próprios olhos. Recomendado!",
   "evolution.config.hitmarkers": "Hitmarkers",
   "evolution.config.hitmarkers.comment": "Mostra hitmarkers quando você dá dano ou mata inimigos.",
   "evolution.config.label.client": "Client",
   "evolution.config.label.common": "Geral",
+  "evolution.config.label.debug": "Debug",
+  "evolution.config.label.sky": "Sky",
   "evolution.config.limitTimeUnitsToHour": "Limitar Unidades de Tempo em Horas",
   "evolution.config.limitTimeUnitsToHour.comment": "Limita as unidades de tempo na tela de estatísticas em horas, ao invés de dias e anos.",
   "evolution.config.range": "Intervalo: %1$s",
