--- a/src/main/resources/assets/evolution/lang/en_us.json
+++ b/src/main/resources/assets/evolution/lang/en_us.json
@@ -6,8 +6,9 @@
   "itemGroup.evolution.dev": "Developer Items",
   "itemGroup.evolution.eggs": "Spawn Eggs",
   "itemGroup.evolution.liquids": "Liquids and Containers",
+  "itemGroup.evolution.metal": "Metal",
   "itemGroup.evolution.misc": "Misc",
-  "itemGroup.evolution.stone_tools": "Stone Tools",
+  "itemGroup.evolution.stone": "Stone",
   "itemGroup.evolution.trees_and_wood": "Trees and Wood",
   "COMMENT_CONFIG": "________________________________________________________________________________________________________________CONFIGS",
   "evolution.config.allowedValues": "Allowed Values: %1$s",
@@ -541,7 +542,10 @@
   "evolution.fluid.fresh_water": "Fresh Water",
   "evolution.fluid.salt_water": "Salt Water",
   "COMMENT_BLOCKS": "_________________________________________________________________________________________________________________BLOCKS",
-  "block.evolution.block_copper": "Block of Copper",
+  "block.evolution.block_metal_copper": "Block of Copper",
+  "block.evolution.block_metal_copper_exposed": "Exposed Block of Copper",
+  "block.evolution.block_metal_copper_weathered": "Weathered Block of Copper",
+  "block.evolution.block_metal_copper_oxidized": "Oxidized Block of Copper",
   "block.evolution.clay": "Clay",
   "block.evolution.chopping_block_acacia": "Acacia Chopping Block",
   "block.evolution.chopping_block_aspen": "Aspen Chopping Block",
