--- a/src/main/resources/assets/evolution/lang/pt_br.json
+++ b/src/main/resources/assets/evolution/lang/pt_br.json
@@ -42,7 +42,7 @@
   "evolution.config.enum_pound": "lb",
   "evolution.config.enum_rankine": "°R",
   "evolution.config.firstPersonRenderer": "Renderizador de Primeira Pessoa",
-  "evolution.config.firstPersonRenderer.comment": "Renderiza o seu corpo em primeira pessoa como você o veria pelos seus próprios olhos. Recomendado!",
+  "evolution.config.firstPersonRenderer.comment": "Renderiza o seu corpo em primeira pessoa como você o veria pelos seus próprios olhos. Desabilitar não é suportado e glitches visuais podem acontecer.",
   "evolution.config.food": "Unidade de Energia de Comida",
   "evolution.config.food.comment": "A unidade de energia usada pelas comidas no jogo.",
   "evolution.config.hitmarkers": "Hitmarkers",
@@ -379,7 +379,7 @@
   "stat.evolution.death_in_wall": "Morte por Sufocamento em Paredes",
   "stat.evolution.death_on_fire": "Morte por Carbonização",
   "stat.evolution.death_player": "Morte por Jogadores",
-  "stat.evolution.death_spear": "Morte por ser Empalado",
+  "stat.evolution.death_spear": "Morte por Empalamento",
   "stat.evolution.death_total": "Número Total de Mortes",
   "stat.evolution.death_void": "Morte por Cair no Vazio",
   "stat.evolution.death_wall_impact": "Morte por Energia Cinética",
